# agent-talk-2

./: .gitignore  README.md  models.yaml  pyproject.toml
experiments/: README.md
experiments/comm-baseline_20251101T151017Z/: README.md
experiments/comm-baseline_20251101T151017Z/runs/comm_freeform_gpt5_seed13_20251101T170541Z/: command.txt  config.yaml
experiments/comm-baseline_20251101T151017Z/runs/comm_freeform_seed13_20251101T153017Z/: command.txt  config.yaml
experiments/comm-baseline_20251101T151017Z/runs/comm_intent_gpt5_seed13_20251101T170541Z/: command.txt  config.yaml
experiments/comm-baseline_20251101T151017Z/runs/comm_intent_seed13_20251101T151925Z/: command.txt  config.yaml
experiments/loop-recovery_20251031T213232Z/: README.md
experiments/presets/: README.md
experiments/two-agents-bearing-r1_20251028T120000Z/: README.md
scripts/: analyze_loops.py  run_experiment_tmux.sh
src/bioqueryous/: __init__.py
src/bioqueryous/llm_clients/: __init__.py  adapter.py  unified_llm.py
src/bioqueryous/utils/: __init__.py  errors.py  real_time_logger.py
src/llmgrid/: __init__.py  prompts.py  schema.py
src/llmgrid/agent/: llm_agent.py  local_baseline.py
src/llmgrid/cli/: generate_maze.py  poc_two_agents.py  render_gif.py
src/llmgrid/env/: grid.py  maze_generator.py  simulate.py
src/llmgrid/logging/: episode_log.py
src/llmgrid/providers/: openrouter_client.py
src/llmgrid/vis/: gif.py
tests/: test_behavior_bias.py  test_bias_math.py  test_env_step.py  test_llm_unified.py  test_renderer_shader.py  test_schema.py  test_spawn_rule.py
(+180 files in other folders)
